test_scores/negative_dimers/features/P61964.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P61964.pkl.xz